src/main/java/compiladores/chadpp/compiler_components/.antlr/AritmeticParser.java
// Generated from c:\Users\ruben\Documents\Github\chad-plus-plus\src\main\java\compiladores\chadpp\compiler_components\AritmeticParser.g4 by ANTLR 4.9.2

/*
 * Assignatura 21742 - Compiladors
 * Estudis: Grau en Informàtica
 * Itinerari: Computació
 * Curs: 2022 - 2023
 *
 * OMEGA COMPILER
 */

package compiladores.chadpp.compiler_components;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AritmeticParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TRUE=1, FALSE=2, OMEGA=3, ALPHA=4, OTUPUT=5, INPUTINT=6, INPUTBOL=7, INPUTSTR=8, 
		CONSTANT=9, RETURN=10, INT=11, BOOLEAN=12, STRING=13, VOID=14, IF=15, 
		ELSE=16, WHILE=17, BEGIN=18, REQUAL=19, RNOTEQUAL=20, LAND=21, LOR=22, 
		PLUSPLUS=23, MINUSMINUS=24, COMMA=25, LPAREN=26, RPAREN=27, LSKEY=28, 
		RSKEY=29, LKEY=30, RKEY=31, SEMICOLON=32, EQUAL=33, PLUS=34, MINUS=35, 
		MUL=36, RLESS=37, RGRE=38, LNOT=39, STRING_LIT=40, ID=41, NUMBER=42, COMMENT=43, 
		WS=44, ENDLINE=45;
	public static final int
		RULE_omega = 0, RULE_function = 1, RULE_extrad = 2, RULE_decl = 3, RULE_asignacion = 4, 
		RULE_listaids = 5, RULE_typef = 6, RULE_type = 7, RULE_params = 8, RULE_param = 9, 
		RULE_args = 10, RULE_expresion = 11, RULE_cont_expresion = 12, RULE_callf = 13, 
		RULE_op = 14, RULE_post = 15, RULE_bool = 16, RULE_instr = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"omega", "function", "extrad", "decl", "asignacion", "listaids", "typef", 
			"type", "params", "param", "args", "expresion", "cont_expresion", "callf", 
			"op", "post", "bool", "instr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'verdadero'", "'false'", "'omega'", "'alpha'", "'output'", "'inputint'", 
			"'inputbol'", "'inputstr'", "'const'", "'return'", "'int'", "'bol'", 
			"'str'", "'nil'", "'if'", "'else'", "'while'", "'begin'", "'=='", "'!='", 
			"'&&'", "'||'", "'++'", "'--'", "','", "'('", "')'", "'['", "']'", "'{'", 
			"'}'", "';'", "'='", "'+'", "'-'", "'*'", "'<'", "'>'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TRUE", "FALSE", "OMEGA", "ALPHA", "OTUPUT", "INPUTINT", "INPUTBOL", 
			"INPUTSTR", "CONSTANT", "RETURN", "INT", "BOOLEAN", "STRING", "VOID", 
			"IF", "ELSE", "WHILE", "BEGIN", "REQUAL", "RNOTEQUAL", "LAND", "LOR", 
			"PLUSPLUS", "MINUSMINUS", "COMMA", "LPAREN", "RPAREN", "LSKEY", "RSKEY", 
			"LKEY", "RKEY", "SEMICOLON", "EQUAL", "PLUS", "MINUS", "MUL", "RLESS", 
			"RGRE", "LNOT", "STRING_LIT", "ID", "NUMBER", "COMMENT", "WS", "ENDLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AritmeticParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AritmeticParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class OmegaContext extends ParserRuleContext {
		public TerminalNode OMEGA() { return getToken(AritmeticParser.OMEGA, 0); }
		public TerminalNode LKEY() { return getToken(AritmeticParser.LKEY, 0); }
		public TerminalNode RKEY() { return getToken(AritmeticParser.RKEY, 0); }
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public ExtradContext extrad() {
			return getRuleContext(ExtradContext.class,0);
		}
		public List<InstrContext> instr() {
			return getRuleContexts(InstrContext.class);
		}
		public InstrContext instr(int i) {
			return getRuleContext(InstrContext.class,i);
		}
		public OmegaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_omega; }
	}

	public final OmegaContext omega() throws RecognitionException {
		OmegaContext _localctx = new OmegaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_omega);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOLEAN) | (1L << STRING) | (1L << VOID))) != 0)) {
				{
				{
				setState(36);
				function();
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(42);
			match(OMEGA);
			setState(43);
			match(LKEY);
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONSTANT) | (1L << INT) | (1L << BOOLEAN) | (1L << STRING))) != 0)) {
				{
				setState(44);
				extrad();
				}
			}

			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OTUPUT) | (1L << INPUTINT) | (1L << INPUTBOL) | (1L << INPUTSTR) | (1L << RETURN) | (1L << IF) | (1L << WHILE) | (1L << ID))) != 0)) {
				{
				{
				setState(47);
				instr();
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(53);
			match(RKEY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TypefContext typef() {
			return getRuleContext(TypefContext.class,0);
		}
		public TerminalNode ALPHA() { return getToken(AritmeticParser.ALPHA, 0); }
		public TerminalNode ID() { return getToken(AritmeticParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(AritmeticParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(AritmeticParser.RPAREN, 0); }
		public TerminalNode LKEY() { return getToken(AritmeticParser.LKEY, 0); }
		public TerminalNode RKEY() { return getToken(AritmeticParser.RKEY, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public ExtradContext extrad() {
			return getRuleContext(ExtradContext.class,0);
		}
		public List<InstrContext> instr() {
			return getRuleContexts(InstrContext.class);
		}
		public InstrContext instr(int i) {
			return getRuleContext(InstrContext.class,i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			typef();
			setState(56);
			match(ALPHA);
			setState(57);
			match(ID);
			setState(58);
			match(LPAREN);
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOLEAN) | (1L << STRING))) != 0)) {
				{
				setState(59);
				params();
				}
			}

			setState(62);
			match(RPAREN);
			setState(63);
			match(LKEY);
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONSTANT) | (1L << INT) | (1L << BOOLEAN) | (1L << STRING))) != 0)) {
				{
				setState(64);
				extrad();
				}
			}

			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OTUPUT) | (1L << INPUTINT) | (1L << INPUTBOL) | (1L << INPUTSTR) | (1L << RETURN) | (1L << IF) | (1L << WHILE) | (1L << ID))) != 0)) {
				{
				{
				setState(67);
				instr();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			match(RKEY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExtradContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(AritmeticParser.BEGIN, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public ExtradContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extrad; }
	}

	public final ExtradContext extrad() throws RecognitionException {
		ExtradContext _localctx = new ExtradContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_extrad);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(75);
				decl();
				}
				}
				setState(78); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONSTANT) | (1L << INT) | (1L << BOOLEAN) | (1L << STRING))) != 0) );
			setState(80);
			match(BEGIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public TerminalNode CONSTANT() { return getToken(AritmeticParser.CONSTANT, 0); }
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONSTANT) {
				{
				setState(82);
				match(CONSTANT);
				}
			}

			setState(85);
			type();
			setState(86);
			asignacion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public ListaidsContext listaids() {
			return getRuleContext(ListaidsContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(AritmeticParser.EQUAL, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(AritmeticParser.SEMICOLON, 0); }
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			listaids();
			setState(89);
			match(EQUAL);
			setState(90);
			expresion();
			setState(91);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaidsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(AritmeticParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AritmeticParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AritmeticParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AritmeticParser.COMMA, i);
		}
		public ListaidsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaids; }
	}

	public final ListaidsContext listaids() throws RecognitionException {
		ListaidsContext _localctx = new ListaidsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_listaids);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(93);
					match(ID);
					setState(94);
					match(COMMA);
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(100);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypefContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(AritmeticParser.VOID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typef; }
	}

	public final TypefContext typef() throws RecognitionException {
		TypefContext _localctx = new TypefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typef);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VOID:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				match(VOID);
				}
				break;
			case INT:
			case BOOLEAN:
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(AritmeticParser.INT, 0); }
		public TerminalNode BOOLEAN() { return getToken(AritmeticParser.BOOLEAN, 0); }
		public TerminalNode STRING() { return getToken(AritmeticParser.STRING, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOLEAN) | (1L << STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AritmeticParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AritmeticParser.COMMA, i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_params);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(108);
					param();
					setState(109);
					match(COMMA);
					}
					} 
				}
				setState(115);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(116);
			param();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(AritmeticParser.ID, 0); }
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			type();
			setState(119);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgsContext extends ParserRuleContext {
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AritmeticParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AritmeticParser.COMMA, i);
		}
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
	}

	public final ArgsContext args() throws RecognitionException {
		ArgsContext _localctx = new ArgsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_args);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(121);
					expresion();
					setState(122);
					match(COMMA);
					}
					} 
				}
				setState(128);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(129);
			expresion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionContext extends ParserRuleContext {
		public List<Cont_expresionContext> cont_expresion() {
			return getRuleContexts(Cont_expresionContext.class);
		}
		public Cont_expresionContext cont_expresion(int i) {
			return getRuleContext(Cont_expresionContext.class,i);
		}
		public List<OpContext> op() {
			return getRuleContexts(OpContext.class);
		}
		public OpContext op(int i) {
			return getRuleContext(OpContext.class,i);
		}
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
	}

	public final ExpresionContext expresion() throws RecognitionException {
		ExpresionContext _localctx = new ExpresionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expresion);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(131);
					cont_expresion();
					setState(132);
					op();
					}
					} 
				}
				setState(138);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			setState(139);
			cont_expresion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cont_expresionContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(AritmeticParser.NUMBER, 0); }
		public TerminalNode STRING_LIT() { return getToken(AritmeticParser.STRING_LIT, 0); }
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(AritmeticParser.LPAREN, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(AritmeticParser.RPAREN, 0); }
		public TerminalNode LNOT() { return getToken(AritmeticParser.LNOT, 0); }
		public TerminalNode ID() { return getToken(AritmeticParser.ID, 0); }
		public PostContext post() {
			return getRuleContext(PostContext.class,0);
		}
		public CallfContext callf() {
			return getRuleContext(CallfContext.class,0);
		}
		public Cont_expresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cont_expresion; }
	}

	public final Cont_expresionContext cont_expresion() throws RecognitionException {
		Cont_expresionContext _localctx = new Cont_expresionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_cont_expresion);
		int _la;
		try {
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				match(NUMBER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				match(STRING_LIT);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(143);
				bool();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(144);
				match(LPAREN);
				setState(145);
				expresion();
				setState(146);
				match(RPAREN);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(148);
				match(LNOT);
				setState(149);
				expresion();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(150);
				match(ID);
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PLUSPLUS || _la==MINUSMINUS) {
					{
					setState(151);
					post();
					}
				}

				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(154);
				callf();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallfContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(AritmeticParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(AritmeticParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(AritmeticParser.RPAREN, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public TerminalNode INPUTINT() { return getToken(AritmeticParser.INPUTINT, 0); }
		public TerminalNode INPUTBOL() { return getToken(AritmeticParser.INPUTBOL, 0); }
		public TerminalNode INPUTSTR() { return getToken(AritmeticParser.INPUTSTR, 0); }
		public CallfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callf; }
	}

	public final CallfContext callf() throws RecognitionException {
		CallfContext _localctx = new CallfContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_callf);
		int _la;
		try {
			setState(172);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				match(ID);
				setState(158);
				match(LPAREN);
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << INPUTINT) | (1L << INPUTBOL) | (1L << INPUTSTR) | (1L << LPAREN) | (1L << LNOT) | (1L << STRING_LIT) | (1L << ID) | (1L << NUMBER))) != 0)) {
					{
					setState(159);
					args();
					}
				}

				setState(162);
				match(RPAREN);
				}
				break;
			case INPUTINT:
				enterOuterAlt(_localctx, 2);
				{
				setState(163);
				match(INPUTINT);
				setState(164);
				match(LPAREN);
				setState(165);
				match(RPAREN);
				}
				break;
			case INPUTBOL:
				enterOuterAlt(_localctx, 3);
				{
				setState(166);
				match(INPUTBOL);
				setState(167);
				match(LPAREN);
				setState(168);
				match(RPAREN);
				}
				break;
			case INPUTSTR:
				enterOuterAlt(_localctx, 4);
				{
				setState(169);
				match(INPUTSTR);
				setState(170);
				match(LPAREN);
				setState(171);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(AritmeticParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(AritmeticParser.MINUS, 0); }
		public TerminalNode MUL() { return getToken(AritmeticParser.MUL, 0); }
		public TerminalNode LAND() { return getToken(AritmeticParser.LAND, 0); }
		public TerminalNode LOR() { return getToken(AritmeticParser.LOR, 0); }
		public TerminalNode REQUAL() { return getToken(AritmeticParser.REQUAL, 0); }
		public TerminalNode RNOTEQUAL() { return getToken(AritmeticParser.RNOTEQUAL, 0); }
		public TerminalNode RLESS() { return getToken(AritmeticParser.RLESS, 0); }
		public TerminalNode RGRE() { return getToken(AritmeticParser.RGRE, 0); }
		public OpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op; }
	}
